--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -46,4 +46,21 @@ header, footer, .sidebar, main {
     @apply bg-gray-500;
   }
 
+  .custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: #6b7280 #e5e7eb;
+  }
   
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #e5e7eb;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #6b7280;
+    border-radius: 10px;
+    border: 3px solid #e5e7eb;
+  }
